{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 55,
  "lineage": "5e49d9e9-03b3-5225-28ab-2c8725ca04ed",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-089266ca74e5fab4f",
            "domain": "vpc",
            "id": "eipalloc-089266ca74e5fab4f",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-2-206-102.compute-1.amazonaws.com",
            "public_ip": "52.2.206.102",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:080916090676:internet-gateway/igw-0b101018e25d4eab6",
            "id": "igw-0b101018e25d4eab6",
            "owner_id": "080916090676",
            "tags": {
              "Name": "myigw"
            },
            "tags_all": {
              "Name": "myigw"
            },
            "vpc_id": "vpc-0c480572423b6e6ca"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04fd52ba9fe88d9a8",
            "original_route_table_id": "rtb-0c239692b8436ddbe",
            "route_table_id": "rtb-017179d65380714f5",
            "vpc_id": "vpc-0c480572423b6e6ca"
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_nat_gateway.ngtw",
            "aws_route_table.prv-rt",
            "aws_subnet.pub_subnet",
            "aws_vpc.myvpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngtw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-089266ca74e5fab4f",
            "association_id": "eipassoc-05b1d522ff1daa3e3",
            "connectivity_type": "public",
            "id": "nat-0dbfe7d23c8084f8d",
            "network_interface_id": "eni-05d92e6fc61cbff52",
            "private_ip": "10.0.2.252",
            "public_ip": "52.2.206.102",
            "subnet_id": "subnet-0357f5cb7cce5e81e"
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_subnet.pub_subnet",
            "aws_vpc.myvpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prv-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:080916090676:route-table/rtb-017179d65380714f5",
            "id": "rtb-017179d65380714f5",
            "owner_id": "080916090676",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0dbfe7d23c8084f8d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prv-rt-1"
            },
            "tags_all": {
              "Name": "prv-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c480572423b6e6ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip1",
            "aws_nat_gateway.ngtw",
            "aws_subnet.pub_subnet",
            "aws_vpc.myvpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:080916090676:route-table/rtb-08c921c073d87e2c1",
            "id": "rtb-08c921c073d87e2c1",
            "owner_id": "080916090676",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b101018e25d4eab6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub-rt-1"
            },
            "tags_all": {
              "Name": "pub-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c480572423b6e6ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9bd63b570f99fad",
            "route_table_id": "rtb-08c921c073d87e2c1",
            "subnet_id": "subnet-0357f5cb7cce5e81e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub-rt",
            "aws_subnet.pub_subnet",
            "aws_vpc.myvpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prv_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:080916090676:subnet/subnet-0525c3fa90f01fa9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0525c3fa90f01fa9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "080916090676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prv-subnet"
            },
            "tags_all": {
              "Name": "prv-subnet"
            },
            "vpc_id": "vpc-0c480572423b6e6ca"
          },
          "dependencies": [
            "aws_vpc.myvpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:080916090676:subnet/subnet-0357f5cb7cce5e81e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0357f5cb7cce5e81e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "080916090676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0c480572423b6e6ca"
          },
          "dependencies": [
            "aws_vpc.myvpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:080916090676:vpc/vpc-0c480572423b6e6ca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-033cd26012cae90fa",
            "default_route_table_id": "rtb-0c239692b8436ddbe",
            "default_security_group_id": "sg-0e9630d2c152e2bef",
            "dhcp_options_id": "dopt-015f2b0daebc96aec",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c480572423b6e6ca",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c239692b8436ddbe",
            "owner_id": "080916090676",
            "tags": {
              "Name": "demo-vpc"
            },
            "tags_all": {
              "Name": "demo-vpc"
            }
          }
        }
      ]
    }
  ]
}